Implement PUT users/:userid endpoint.
